# hubble-reference-thingy53

./: .gitlint  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  west.yml
.github/workflows/: auto-assign.yaml  build-check.yaml  compliance.yaml
app/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  debug.conf  prj.conf  sysbuild.cmake
app/boards/: thingy53_nrf5340_cpuapp.overlay
app/common/: sat_ipc.h
app/cpunet/: CMakeLists.txt  Kconfig  prj.conf
app/cpunet/boards/: thingy53_nrf5340_cpunet.overlay
app/cpunet/src/: main.c  sat.c  sat.h
app/src/: app.h  ble.c  ble.h  button.c  led.c  led.h  main.c  nvs.c  nvs.h  sat.h  sat_board.c  sensor.c  shell.c  shell.h
scripts/: companion.py  requirements.txt
